fixed overflow scrolling bug

--- a/css/canvas.css
+++ b/css/canvas.css
@@ -141,7 +141,7 @@ body {
     --margin-top: 556;
     background-color: #F4F1E7;
     z-index: 5;
-    overflow: scroll;
+
 }
 
 .small-card p {
